<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="window_title">Recall</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recent_clippings">Recent Clippings</string>
    <string name="action_exit">Exit</string>
    <string name="action_clear_all">Remove All</string>
    <string name="Cancel">Cancel</string>
    <string name="pref_storage">Storage</string>
    <string name="pref_summary_auto_delete">Whether or not to remove old clippings.</string>
    <string name="pref_title_auto_delete">Automatic Deletion</string>
    <string name="pref_summary_delete_limit">How many clippings do you want to remember?</string>
    <string name="pref_title_delete">Max Clippings</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_start_on_boot">Start on Boot</string>
    <string name="title_activity_settings">Settings</string>
    <string name="star">Star</string>
    <string name="noElements">There doesn\'t seem to be anything in here, copy some text?</string>

</resources>