<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_storage" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_auto_delete"
            android:summary="@string/pref_summary_auto_delete"
            android:title="@string/pref_title_auto_delete" />

        <EditTextPreference
            android:dependency="pref_key_auto_delete"
            android:key="pref_key_auto_delete_limit"
            android:summary="@string/pref_summary_delete_limit"
            android:title="@string/pref_title_delete" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_advanced_settings"
        android:title="@string/pref_advanced" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_start_on_boot"
            android:title="@string/pref_start_on_boot" />
    </PreferenceCategory>

</PreferenceScreen>